# neutral_face_engine

./: .gitignore  CMakeLists.txt  launch.json
shaders/: shader.slang
source/: game.cpp  game.h  input.cpp  input.h  main.cpp  matrix.cpp  matrix.h  platform_render.cpp  platform_render.h  vector.cpp  vector.h
tools/: geometry_preprocessor.py
